--- a/Cucumber-Spike/build.gradle
+++ b/Cucumber-Spike/build.gradle
@@ -10,20 +10,31 @@ dependencies {
 
     testCompile 'org.seleniumhq.selenium:selenium-java:2.33.0'
     testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.33.0'
-    testCompile 'info.cukes:cucumber-core:1.1.3'
-    testCompile 'info.cukes:cucumber-html:1.1.3'
-    testCompile 'info.cukes:cucumber-java:1.1.3'
-    testCompile 'info.cukes:cucumber-junit:1.1.3'
+    testCompile 'info.cukes:cucumber-core:1.1.2'
+    testCompile 'info.cukes:cucumber-java:1.1.2'
+    testCompile 'info.cukes:cucumber-junit:1.1.2'
     testCompile 'junit:junit:4.11'
 }
 
-task cucumber() {
+
+task cucumberBasic() {
     dependsOn assemble, compileTestJava
     doLast {
         javaexec {
             main = "cucumber.api.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args = ['-f', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources']
+            args = ['-f', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources/gradle/cucumber/Basic.feature']
+        }
+    }
+}
+
+task cucumberGoogle() {
+    dependsOn assemble, compileTestJava
+    doLast {
+        javaexec {
+            main = "cucumber.api.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            args = ['-f', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources/gradle/cucumber/Google.feature']
         }
     }
 }
